2003-01-28  Jody Goldberg <jody@gnome.org>

	* Release 1.1.16

2003-01-22  Jody Goldberg <jody@gnome.org>

	* xml-sax-read.c : Convert to the new gsf xml utilities to get
	  namespace support.

2002-12-31  Jody Goldberg <jody@gnome.org>

	* Release 1.1.15

2002-12-22  Jody Goldberg <jody@gnome.org>

	* Release 1.1.14

2002-12-22  Jody Goldberg <jody@gnome.org>

	* Release 1.1.13

2002-12-19  Morten Welinder  <terra@diku.dk>

	* xml-sax-read.c (xml_sax_named_expr_end):
	s/gnm_expr_conventions_default_1_0/gnm_expr_conventions_default/.
	They're both wrong, but I want to get rid of the former.

2002-12-03  Morten Welinder  <terra@diku.dk>

	* xml-sax-read.c (xml_sax_print_margins_unit): Use
	unit_name_to_unit.

2002-11-15  Jody Goldberg <jody@gnome.org>

	* Release 1.1.12

2002-11-14  Jon K Hellan  <hellan@acm.org>

	* plugin.xml.in: Remove "open" and "import" attributes.

2002-11-01  Jody Goldberg <jody@gnome.org>

	* Release 1.1.11

2002-10-27  Jody Goldberg <jody@gnome.org>

	* Release 1.1.10

2002-09-30  Jody Goldberg <jody@gnome.org>

	* Release 1.1.9

2002-09-23  Jody Goldberg <jody@gnome.org>

	* xml-sax-read.c (unknown_attr) : restore this and have it use
	  io-context.
	(gnumeric_1_0_dtd) : fix.
	(xml_sax_style_region_start) : Use new_default for newer versions

2002-09-06  Jody Goldberg <jody@gnome.org>

	* xml-sax-read.c (xml_sax_finish_parse_wb_names_name) : convert to
	  cellref_get.
	(xml_sax_finish_parse_sheet_names_name) : ditto.

2002-08-25  Jody Goldberg <jody@gnome.org>

	* Release 1.1.8

2002-08-12  Jody Goldberg <jody@gnome.org>

	* Release 1.1.7

2002-08-10  Jody Goldberg <jody@gnome.org>

	* xml-sax-read.c (xml_sax_styleregion_start) : read shrink to fit.

2002-07-22  Zbigniew Chyla  <cyba@gnome.pl>

	* plugin.xml.in: Set loader type to "Gnumeric_Builtin:module".

2002-07-21  Jody Goldberg <jody@gnome.org>

	* Release 1.1.6

2002-06-27  Jody Goldberg <jody@gnome.org>

	* xml-sax-read.c (xml_sax_sheet_layout) : top left is
	  in view now.