@@ -13,11 +13,13 @@
 				<_description>EXPERIMENTAL SAX based Gnumeric (*.gnumeric)</_description>
 			</information>
 		</service>
+		<!-- disable so that people do not get screwed
 		<service type="file_saver" id="xml_sax" file_extension="gnumeric"
 		         format_level="auto" overwrite_files="TRUE">
 			<information>
 				<_description>EXPERIMENTAL Gnumeric XML (*.gnumeric)</_description>
 			</information>
 		</service>
+		 -->
 	</services>
 </plugin>
