@@ -1,3 +1,7 @@
+2003-03-26  Jody Goldberg <jody@gnome.org>
+
+	* plugin.xml.in : disable sax save by default
+
 2003-01-28  Jody Goldberg <jody@gnome.org>
 
 	* Release 1.1.16
